	Fixed slapd backend_init_controls assert (ITS#3853)
	Fixed slapd loglevel -1 bug (ITS#3858)
	Fixed slapi bind bound DN issue (ITS#2971)
	Fixed slapi issues (ITS#3884,3885,3886)
	Fixed slapi authorization name issue (ITS#3892)
	Fixed slapi slapi_int_connection_init operation problem (ITS#3868)
	Fixed slapi slapi_entry_has_children bug (ITS#3879)
	Fixed slapd-bdb/hdb checkpoint before suffix bug (ITS#3784)
	Fixed slapd-hdb modrdn base bug (ITS#3857)
	Fixed slapd-ldap access to freed connection (ITS#3913)
	Fixed slapd-ldap/meta filter bug (ITS#3785)
	Fixed slapd-ldap/meta connection pooling (ITS#3813)
	Fixed slapd-ldap/meta memory leak (ITS#3862)
	Added slapd-sql enhancements (ITS#3432)
	Fixed slapd-sql attribute with no values issue (ITS#3861)
	Fixed slapd-sql truncating keyval column problem (ITS#3888)
	Fixed slapd-sql return code ignored problem (ITS#3891)
	Fixed slapo-glue alock bug (ITS#3817,3841)
	Fixed slapo-dyngroup hidden subschemaSubentry bug (ITS#3844)
	Fixed slapo-ppolicy hashed length problem (ITS#3783)
	Fixed slapo-ppolicy quality check (ITS#3777)
	Fixed slapo-ppolicy lockout duration (ITS#3779)
	Fixed slapo-rwm leak (ITS#3914)
	Fixed slapo-glue/rwm conflict (ITS#3788)
	Fixed slapadd segfault (ITS#3926)
	Fixed slapadd/index bdb/hdb db_stat issue (ITS#3824)
	Fixed slapcat cn=config segfault (ITS#3796)
	Fixed slaptest -F crash (ITS#3912)
	Fixed slapd authzTo/From syntax issue (ITS#3921)
	Fixed libldap abandon concurrency issue (ITS#3800)
	Fixed libldap start_tls referral chasing (ITS#3791)
	Fixed libldap referral chasing issues (ITS#2894,3578)
	Use IANA-assigned OIDs for recently approved LDAP extensions
	Removed lint (ITS#3857)
	Build Environment
		Upgraded shtool (ITS#3752)
		Upgraded config.guess/config.sub
		Fixed FreeBSD thread stacksize problem (ITS#3456)
		Fixed cygwin shared libraries build problem (ITS#3712)
		Fixed acl_get/acl_mask v AIX symbol clash (ITS#3787)
		Fixed test020 logging problem (ITS#3811)